[package]
name = "wiki_scrap"
version = "0.1.0"
edition = "2021"
authors = ["Tarik Hasan Khan <tariksayshi@gmail.com> "]

[dependencies]
csv = "1.3.1"
reqwest = "0.12.15"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
